Added vanity roles configuration template

--- a/config.json
+++ b/config.json
@@ -47,6 +47,13 @@
     "default_role": {
     "server_and_default_role_id_pairs": []
   },
+  "vanity_role_commands": {
+    "command_role_id_pairs" [
+        [
+          "ROLE COMMAND", ROLE ID  
+        ]
+      ]
+  },
   "logging": {
     "log_file_name": "discord.log"
   },
