Added missing colon to config template

--- a/config.json
+++ b/config.json
@@ -48,7 +48,7 @@
     "server_and_default_role_id_pairs": []
   },
   "vanity_role_commands": {
-    "command_role_id_pairs" [
+    "command_role_id_pairs": [
         [
           "ROLE COMMAND", ROLE ID  
         ]
