--- a/config.json
+++ b/config.json
@@ -23,7 +23,10 @@
     "commands_received": 0
   },
   "referral_config": {
-    "SERVER ID": {"announce_channel_id": CHANNEL ID TO ANNOUNCE WHEN SOMEONE GETS REFERRED, 0 IF NOT USED}
+    "SERVER ID": {
+      "announce_channel_id": CHANNEL ID TO ANNOUNCE WHEN SOMEONE GETS REFERRED, 0 IF NOT USED, 
+      "referral_timeout_min": NUMBER OF MINUTES TO ANSWER WITH REFERRER UNTIL IT TIMEOUTS
+    }
   },
   "log_config": {
     "ignored_log_user_names": [
