--- a/config.json
+++ b/config.json
@@ -41,6 +41,7 @@
     "use_email_notifications": false,
     "email_settings": {
       "smtp_server": "",
+      "smtp_port" ,
       "username": "",
       "password": "",
       "send_to": [""],
